; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_dump.c_mrb_dump_irep.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_dump.c_mrb_dump_irep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLAG_BYTEORDER_NONATIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mrb_dump_irep(i32* %0, i32* %1, i32 %2, i32** %3, i64* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32**, align 8
  %10 = alloca i64*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32** %3, i32*** %9, align 8
  store i64* %4, i64** %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* @FLAG_BYTEORDER_NONATIVE, align 4
  %15 = call i32 @dump_flags(i32 %13, i32 %14)
  %16 = load i32**, i32*** %9, align 8
  %17 = load i64*, i64** %10, align 8
  %18 = call i32 @dump_irep(i32* %11, i32* %12, i32 %15, i32** %16, i64* %17)
  ret i32 %18
}

declare dso_local i32 @dump_irep(i32*, i32*, i32, i32**, i64*) #1

declare dso_local i32 @dump_flags(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
